# raspberry-pi-water-irrigation-system

./: README.md  package-lock.json
frontend/: index.html  script.js  style.css
node-server/: package-lock.json  package.json  server.js
raspberry-pi/: BranchingAttempt.txt  CMakeLists.txt  Makefile  TestingLeesPull.txt  main.c  main.cpp  soil_moisture.c  water_pump.c  watering_system_main.c
raspberry-pi/sensors/: proximity.cpp  soil_moisture.c  temp_and_humidyt.c  water_pump.c
